# droidkraft

./: CHANGELOG.md  Cargo.toml  FEATURES.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  RELEASE.md  cliff.toml  justfile
.gitea/workflows/: ci.yml  release.yml
.github/workflows/: release.yml
crates/droidkraft-core/: Cargo.toml  README.md
crates/droidkraft-core/src/: client.rs  color.rs  error.rs  lib.rs  macros.rs  utils.rs
crates/droidkraft-core/src/features/: mod.rs
crates/droidkraft-core/src/features/device/: ops.rs
crates/droidkraft-core/src/features/fastboot/: types.rs
crates/droidkraft-core/src/features/flash/: mod.rs  ops.rs
crates/droidkraft-core/src/features/logcat/: filter.rs  mod.rs
crates/droidkraft-core/src/features/rom/: catalog.rs  download.rs  flash.rs  graphene.rs  lineage.rs  mod.rs  ops.rs  resolve.rs  types.rs
crates/droidkraft-core/src/features/screen/: ops.rs  types.rs
crates/droidkraft-core/src/features/shell/: mod.rs  types.rs
crates/droidkraft-core/src/features/system/: mod.rs
crates/droidkraft-core/tests/: public_api.rs
crates/droidkraft-gui/: Cargo.toml  README.md
crates/droidkraft-gui/src/: app.rs  commands.rs  lib.rs  main.rs  screen.rs  theme.rs  worker.rs
crates/droidkraft-tui/: Cargo.toml  README.md
crates/droidkraft-tui/examples/: README.md  device_info.rs  main_menu.rs  package_manager.rs  streaming.rs
crates/droidkraft-tui/examples/vhs/: README.md  all_examples.tape  device_info.tape  features_highlight.tape  full_demo.tape  generate_all.sh  main_menu.tape  navigation_showcase.tape  package_manager.tape  quickstart.tape  streaming.tape
crates/droidkraft-tui/src/: adb.rs  app.rs  devtools.rs  effects.rs  fastboot.rs  lib.rs  logcat.rs  main.rs  menu.rs  message.rs  model.rs  rom_flash.rs  theme.rs  update.rs  view.rs
crates/droidkraft-tui/tests/: adb_integration_tests.rs
crates/droidtui-core/: Cargo.toml  README.md
crates/droidtui-core/src/: lib.rs  macros.rs  utils.rs
crates/droidtui-core/src/features/device/: mod.rs  types.rs
crates/droidtui-core/src/features/fastboot/: mod.rs  ops.rs  types.rs
crates/droidtui-core/src/features/flash/: ops.rs  types.rs
crates/droidtui-core/src/features/logcat/: filter.rs  mod.rs  stream.rs  types.rs
crates/droidtui-core/src/features/screen/: mod.rs  types.rs
crates/droidtui-core/src/features/system/: ops.rs
crates/droidtui-core/tests/: public_api.rs
crates/droidtui-gui/: Cargo.toml  README.md
crates/droidtui-gui/src/: app.rs  commands.rs  lib.rs  main.rs  screen.rs  theme.rs  worker.rs
crates/droidtui-tui/: Cargo.toml  README.md
crates/droidtui-tui/src/: adb.rs  devtools.rs  fastboot.rs  lib.rs  logcat.rs  menu.rs  view.rs
scripts/: bump_version.nu  check_publish.nu  demo.nu  release_prepare.nu  run.nu
scripts/logcat/: error_summary.nu  filter_json.nu  find_crashes.nu  timeline.nu  top_tags.nu
scripts/tests/: run_all.nu  runner.nu  test_bump_version.nu  test_release_prepare.nu  test_version.nu
src/: adb.rs  app.rs  devtools.rs  event.rs  fastboot.rs  lib.rs  logcat.rs  main.rs  menu.rs  message.rs  model.rs  theme.rs  update.rs  view.rs
