[workspace]
members = [
    "crates/droidkraft-core",
    "crates/droidkraft-tui",
    "crates/droidkraft-gui",
]
# The GUI depends on Zed's gpui, which requires the full Xcode Metal toolchain
# (macOS) to build. Keep it out of the default set so `cargo build`/`cargo test`
# stay green on machines without it; build it explicitly with `-p droidkraft`.
default-members = [
    "crates/droidkraft-core",
    "crates/droidkraft-tui",
]
resolver = "2"

[workspace.package]
version      = "1.0.0"
edition    = "2021"
authors    = ["Sorin Albu-Irimies <mihaiirimies@gmail.com>"]
license    = "MIT"
repository = "https://github.com/sorinirimies/droidkraft"
homepage   = "https://github.com/sorinirimies/droidkraft"

# ── Shared dependency versions ─────────────────────────────────────────────────
# Pin versions here once; each crate references them with `{ workspace = true }`
# so there is a single source of truth.
[workspace.dependencies]
# Core / shared (framework-free)
adb_client  = "2.1.17"
regex       = "1"
serde       = { version = "1.0.228", features = ["derive"] }
serde_json  = "1.0.149"

# Async / runtime
tokio    = { version = "1.40.0", features = ["full"] }
futures  = "0.3.32"

# Errors
color-eyre = "0.6.3"

# TUI (Ratatui)
crossterm         = { version = "0.28.1", features = ["event-stream"] }
ratatui           = "0.29.0"
ratatui-widgets   = "0.2.2"
tachyonfx         = "0.7.0"
tui-file-explorer = { version = "0.8.8", default-features = false }

# Internal crates
droidkraft-core = { path = "crates/droidkraft-core", version = "1.0.0" }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"