[package]
name = "droidkraft-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared core logic for DroidKraft — framework-free ADB & fastboot API, device info, logcat, and flash/root toolkit"
readme = "README.md"
categories = ["development-tools", "command-line-utilities"]
keywords = ["android", "adb", "fastboot", "logcat", "device"]

[dependencies]
adb_client = { workspace = true }
regex      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
