[package]
name = "droidkraft-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "DroidKraft GUI — Android device monitor, live logs, command & flash/root toolkit, screen mirroring (Zed GPUI)"
publish = false

[[bin]]
name = "droidkraft-gui"
path = "src/main.rs"

[lib]
name = "droidkraft_gui"
path = "src/lib.rs"

[dependencies]
droidkraft-core = { workspace = true }
gpui = { git = "https://github.com/zed-industries/zed", rev = "60314a7" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "60314a7", features = ["font-kit"] }
serde      = { workspace = true }
serde_json = { workspace = true }
