[package]
name = "droidkraft"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "DroidKraft — Android device monitor GUI: live logs, one-click commands, flash/root toolkit, and screen mirroring (Zed GPUI)"
documentation = "https://docs.rs/droidkraft"
readme = "README.md"
categories = ["gui", "development-tools"]
keywords = ["android", "adb", "gui", "gpui", "logcat"]

[[bin]]
name = "droidkraft"
path = "src/main.rs"

[lib]
name = "droidkraft_gui"
path = "src/lib.rs"

[dependencies]
droidkraft-core = { workspace = true }
gpui = "0.2.2"
serde      = { workspace = true }
serde_json = { workspace = true }
