[package]
name = "droidtui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A beautiful Terminal User Interface (TUI) for Android development and ADB commands"
documentation = "https://docs.rs/droidtui"
keywords = ["android", "adb", "tui", "terminal", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"

[lib]
name = "droidtui"
path = "src/lib.rs"

[[bin]]
name = "droidtui"
path = "src/main.rs"

[dependencies]
droidtui-core = { workspace = true }

crossterm         = { workspace = true }
futures           = { workspace = true }
ratatui           = { workspace = true }
tokio             = { workspace = true }
color-eyre        = { workspace = true }
tachyonfx         = { workspace = true }
ratatui-widgets   = { workspace = true }
tui-file-explorer = { workspace = true }
regex             = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
adb_client        = { workspace = true }
